# CryptoCTA

./: .gitignore  AGENTS.md  DECISIONS.md  Makefile  PROGRESS.md  README.md  pyproject.toml
.cargo/: config.toml  rustc.sh  rustdoc.sh
.github/workflows/: ci.yml
artifacts/backtests/: btcusdt_1d_rp_grid_calmar_20260330T130648Z_all.csv  btcusdt_1d_rp_grid_calmar_20260330T130648Z_meta.json  btcusdt_1d_rp_grid_calmar_20260330T130648Z_top10.json  btcusdt_1d_rp_grid_calmar_20260330T130648Z_top10_unique_no_risk.json  btcusdt_1d_rp_live_set1_2024-09-01_2026-03-15_rerun_2026-04-02.json  btcusdt_1d_rp_live_set1_2024-09-01_2026-03-28_analysis.json  btcusdt_1d_rp_live_set1_2024-09-01_2026-03-28_recheck_2026-03-31.json  btcusdt_1d_rp_live_smoke_2026-02-01_2026-03-15.json  btcusdt_1h_rsi20_70_ema50_200_atrtrail_2024-09-01_2026-03-28_2026-03-31.json  btcusdt_1h_rsi20_70_no_trendfilter_atrtrail_2024-09-01_2026-03-28_2026-03-31.json  btcusdt_1h_rsi70_chase_rsi30_kill_atrtrail_2024-09-01_2026-03-28_2026-03-31.json
docs/runbooks/: live-operations.md
rust/ledger_core/: Cargo.toml
scripts/: ablation_single_factor.py  check_module_docs.sh  ingest_klines_to_duckdb.py  run_live_strategy.py  run_strategy_backtest.py  run_turtle_backtest.py  walkforward_turtle.py
src/cryptocta.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/app/: test_live_data.py  test_live_runner.py  test_live_state.py
tests/bindings/: test_ledger_binding.py
tests/config/: test_settings.py  test_strategy_backtest_parser.py  test_strategy_presets.py
tests/data/: test_binance_client.py  (+3 more)
(+83 files in other folders)
