[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptocta"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8",
  "duckdb>=1.0.0",
  "polars>=1.10.0",
  "pyarrow>=17.0.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "maturin>=1.7.0", "ruff>=0.6.0"]

[tool.setuptools.packages.find]
where = ["src"]
